[gd_scene load_steps=4 format=2]

[ext_resource path="res://Items/Fruits Asset/01.png" type="Texture" id=1]
[ext_resource path="res://UI/BuildingConfig.gd" type="Script" id=2]
[ext_resource path="res://addons/gloot/ctrl_item_slot.gd" type="Script" id=3]

[node name="BuildingConfig" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_right = 89.0
margin_bottom = 181.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 166.0
margin_bottom = 169.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 156.0
margin_bottom = 159.0

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 7.0
text = "Building Config"
align = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 156.0
margin_bottom = 102.0
split_offset = -5
dragger_visibility = 2

[node name="RecipeHBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 1.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/RecipeHBox"]
margin_right = 1.0
margin_bottom = 87.0
text = "Recipes"
align = 1
autowrap = true

[node name="RecipeItemList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/RecipeHBox"]
margin_top = 91.0
margin_right = 1.0
margin_bottom = 91.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 1.0
margin_right = 156.0
margin_bottom = 91.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer"]
margin_left = 34.0
margin_top = 30.0
margin_right = 121.0
margin_bottom = 61.0

[node name="ProductItemInfo" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer"]
margin_right = 87.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/ProductItemInfo"]
margin_top = 4.0
margin_right = 45.0
margin_bottom = 11.0
text = "Current Recipe:"

[node name="ProductTextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/ProductItemInfo"]
margin_left = 49.0
margin_right = 65.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="ProductItemName" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/ProductItemInfo"]
margin_left = 69.0
margin_top = 4.0
margin_right = 87.0
margin_bottom = 11.0
text = "Blerry"

[node name="WorkProgressBar" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 87.0
margin_bottom = 27.0

[node name="RecipeComponents" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 87.0
margin_bottom = 31.0

[node name="InputCtrlItemSlot1" type="Control" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/RecipeComponents"]
script = ExtResource( 3 )

[node name="InputCtrlItemSlot2" type="Control" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/RecipeComponents"]
margin_left = 4.0
margin_right = 4.0
script = ExtResource( 3 )

[node name="InputCtrlItemSlot3" type="Control" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/CenterContainer/VBoxContainer/RecipeComponents"]
margin_left = 8.0
margin_right = 8.0
script = ExtResource( 3 )
